[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "flin-linkedin-ads-mcp"
version = "0.1.0"
description = "Strict read-only MCP server for LinkedIn Ads"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "flin.agency" }
]
keywords = ["mcp", "linkedin-ads", "linkedin-marketing", "model-context-protocol"]
dependencies = [
  "httpx>=0.28.1",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
flin-linkedin-ads-mcp = "flin_linkedin_ads_mcp.server:main"

[project.urls]
Homepage = "https://github.com/flin-agency/flin-linkedin-ads-mcp"
Repository = "https://github.com/flin-agency/flin-linkedin-ads-mcp"
Issues = "https://github.com/flin-agency/flin-linkedin-ads-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flin_linkedin_ads_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
